Bug 93382 - Crash moving chart
Summary: Crash moving chart
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
5.0.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Stephan Bergmann
URL:
Whiteboard: target:5.1.0 target:5.0.1
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2015-08-12 09:39 UTC by Matthew Francis
Modified: 2016-10-25 19:21 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Matthew Francis 2015-08-12 09:39:59 UTC
Split from bug 92348

Steps to reproduce:
1. Load http://www.cps.gov.uk/publications/docs/vawg_2014_2015_tables.xlsx
2. Go to the sheet "DA"
3. Drag the chart at the top left

Result:
- "Fatal error" dialog with the message "bad rational: zero denominator"
Comment 1 Matthew Francis 2015-08-12 09:41:30 UTC
This began at the below commit.
Adding Cc: to sbergman@redhat.com; Could you possibly take a look at this one? Thanks

    commit 8eb880a04d17c888c2c986426e935e02ae309e7a
    Author:     Stephan Bergmann <sbergman@redhat.com>
    AuthorDate: Thu Jan 8 11:55:20 2015 +0100
    Commit:     Stephan Bergmann <sbergman@redhat.com>
    CommitDate: Thu Jan 8 12:04:15 2015 +0100
    
        HACK to avoid empty page size/div by 0 in chart2 LegendWrapper::setPosition
    
        see thread starting at
        <http://lists.freedesktop.org/archives/libreoffice/2015-January/065706.html>
        "CppunitTest_sw_ooxmlsdrexport: division by zero in
        chart2/source/controller/chartapiwrapper/LegendWrapper.cxx"
    
        Change-Id: If8fde31dff04d9a223687838df6dd9fe4e57ee8b
Comment 2 Commit Notification 2015-08-12 12:17:01 UTC
Stephan Bergmann committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=68c6408b1725a8f506a8adb8c9af67a65e667f1c

tdf#93382: Make HACK more targeted to avoid collateral damage

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 3 Stephan Bergmann 2015-08-12 12:20:09 UTC
...although the HACK from 8eb880a04d17c888c2c986426e935e02ae309e7a should probably still be better replaced with a fix in the relevant place (wherever that is), to not make an unintended(?) 0x0 size happen in the first place
Comment 4 Commit Notification 2015-08-12 12:52:29 UTC
Stephan Bergmann committed a patch related to this issue.
It has been pushed to "libreoffice-5-0-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=5fa848fd12c74204c1383a1307cb822b9278200d&h=libreoffice-5-0-1

tdf#93382: Make HACK more targeted to avoid collateral damage

It will be available in 5.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2015-08-12 12:52:34 UTC
Stephan Bergmann committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a81d95bbee794757176e811e2e37fc8ce7291450&h=libreoffice-5-0

tdf#93382: Make HACK more targeted to avoid collateral damage

It will be available in 5.0.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Robinson Tryon (qubit) 2015-12-17 10:30:51 UTC Comment hidden (obsolete)