tdf#93382: Make HACK more targeted to avoid collateral damage

Change-Id: Ieecad5f244703c4d2436e22a3ab50f719843eef4